--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
     <meta http-equiv="X-UA-Compatdevice-widthible" content="ie=edge">
     <title>Akan Name</title>
 </head>
+<div style="background-image: url('image-akan1.png');">
 <body>
+   <div class="container">
+       <h1>Akan Community Names</h1>
+       <div class="card">
+           <p>The Akan community of Ghana has a unique name of naming their new born babies.<br>
+            They name according to the days of of the week in which they are born.<br>
+            Their first nameare derived from the daythey were born.</p>
+       </div>
+   </div>
     
 </body>
 </html>
