--- a/index.html
+++ b/index.html
@@ -11,10 +11,32 @@
    <div class="container">
        <h1>Akan Community Names</h1>
        <div class="card">
-           <p>The Akan community of Ghana has a unique name of naming their new born babies.<br>
+           <p>The <strong>Akan community of Ghana</strong> has a unique name of naming their new born babies.<br>
             They name according to the days of of the week in which they are born.<br>
-            Their first nameare derived from the daythey were born.</p>
+            Their <em>name are derived</em> from the day they were born.</p>
        </div>
+       <form>
+           <div class="form-group">
+               <label for="exampleFormControlInput1">Year</label>
+               <input type="number" class="form-control" id="year/>
+           </div>
+           <div class="form-group">
+               <label for="exampleFormControlInput1">Month</label>
+               <input type="number" class="form-control" id="month"required max="12" min="01"/>
+           </div>
+           <div class="form-group">
+               <label for="exampleFormControlInput1">Day</label>
+               <input type="number" class="form-control" id="day/>
+           </div>
+           <div class="form-group">
+               <label for="select gender">Gender</label>
+               <select class="form-control"id="gender"required>
+                   <option></option>
+                   <option value="male">Male</option>
+                   <option value="female">female</option>
+               </select>
+           </div>
+       </form>
    </div>
     
 </body>
