--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                    <option value="female">female</option>
                </select>
            </div>
+           <button onclick="getDay()"type="button" class="btn btn-success">Submit</button>
        </form>
    </div>
     
