--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
    <div class="container">
        <h1>Akan Community Names</h1>
        <div class="card">
+           <div class="card-body text-center"></div>
            <p>The <strong>Akan community of Ghana</strong> has a unique name of naming their new born babies.<br>
             They name according to the days of of the week in which they are born.<br>
             Their <em>name are derived</em> from the day they were born.</p>
+            <p a href="https://en.wikipedia.org/wiki/Akan_names"></p>
        </div>
        <form>
            <div class="form-group">
@@ -39,6 +41,7 @@
            <button onclick="getDay()"type="button" class="btn btn-success">Submit</button>
        </form>
    </div>
+
     
 </body>
 </html>
