--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
                    <option value="female">female</option>
                </select>
            </div>
-           <button onclick="getDay()"type="button" class="btn btn-success">Submit</button>
+           <button onclick="getDay()"type="button" class="btn btn-success">
+            Submit
+           </button>
        </form>
    </div>
 
-    
+   <script src="./css/script.js"></script>
 </body>
 </html>
