--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatdevice-widthible" content="ie=edge">
     <title>Akan Name</title>
+    <link rel="stylesheet" href="./css/bootstrap-4.0.0/index.html">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <div style="background-image: url('image-akan1.png');">
 <body>
@@ -43,10 +45,11 @@
            </button>
        </form>
    </div>
-   <h2 class="card-title">Footer</h2>
-<p class="card-text">2020@NGENOHZEPHENIA</p>
+
 
    <script src="./css/script.js"></script>
 </body>
+<h2 class="card-title">Footer</h2>
+<p class="card-text">2020@NGENOHZEPHENIA</p>
 
 </html>
