push my work to gh-pages

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p class="card-text"><p>Akan people of Ghana name their children in accordance to the day of the
           week they were born.<br> <em>Day names</em> is the first names given to this children of this Ghanian culture and it corresponds to the day of the week they were born.</p>
        <strong>Fill the form below </strong>
-      <p>On clicking the submit button it automatically pops the respective Akan Name</p>
+      <p>After clicking the submit button it automatically pops the respective Akan Name</p>
       </div>
       
     </div>
